# Luminescent.jl

./: .buildinfo  .gitignore  0-12.080490489999999_999_0.stl  20241015005803-ft_log_cstg_gens.txt  20241015005803-ft_log_cstg_kills.txt  3-12.080490489999999_1_0.stl  FSS.html  LocalPreferences.toml  Luminescent_AI_docs.ipynb  Manifest.toml  Manifest0.toml  Manifest1.toml  Photonic IC simulation and inverse design with Luminescent AI and gdsfactory.ipynb  Project.toml  README.md  S.s2p  S.s3p  Untitled-1.py  _Luminescent_AI_docs.ipynb  _prob.bson  bend-loop.jl  bend-ode.jl  bend.bson  bend0.bson  boundaries.jl  build.jl  config.json  demo.gds  demo_1_0.stl  demux.html  demux_coupler.html  device.gds  device.yml  fdtd.jl  features.html  features.json  features.md  genindex.html  guess.gds  guess.yml  (+77 more)
.doctrees/: FSS.doctree  demux.doctree  demux_coupler.doctree  environment.pickle  features.doctree  index.doctree  install.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  metagrating_coupler.doctree  mfd.doctree  monopole.doctree  notebooks.doctree  opt.doctree  patch.doctree  pricing.doctree  ref.doctree  ring.doctree  (+9 more)
lumi/: LICENSE  Manifest.toml  Photonic IC simulation and inverse design with Luminescent AI and gdsfactory copy.ipynb  Photonic IC simulation and inverse design with Luminescent AI and gdsfactory.ipynb  Project.toml  pyproject.toml  requirements.txt
lumi/1x2_splitter/: component.gds
lumi/2024-09-14T19-09-14#inverse_design/: component.gds
lumi/docs/: luminescent.html  luminescent.ipynb
lumi/src/: bend.py  bend_inverse_design.py  bend_sparams_test.py  coupler.py  crossing_inverse_design_test.py  demux_inverse_design_test.py  maketest.py  mode_converter_inverse_design_test.py  movie.py  phase_shifter_inverse_design.py  runtest.py  scratch.py  splitter.py  straight.py  straight_test.py  test_bend_sparams.py  test_coupler_sparams.py  test_demux_inverse_design.py  test_mode_converter_inverse_design.py  tiny_test.py  ubend.py  ubend_inverse_design.py
lumi/src/luminescent/: __init__.py  bend_inverse_design.py  ppa.py  sparams.py  sparams_test.py
lumi/src/luminescent/gplugins/: __init__.py
lumi/src/luminescent/gplugins/luminescent/: __init__.py  constants.py  gcells.py  generic_tech.py  gpu.jl  inverse_design.py  luminescent.ipynb  materials.py  picToGDS.py  run copy 2.jl  run copy.jl  run.jl  runs_utils.py  setup.py  snapshot.jl  sol.py  solvemodes.py  sparams.py  toy.py  train.jl  utils.py
lumi/src/luminescent/gplugins/luminescent/src/: Luminescent.jl  a.jl  boundaries.jl  constants.jl  main.jl  meta.jl  modes.jl  photonics.jl  setup.jl  solve copy.jl  solve.jl  sources.jl
lumi/tests/: test_bend_inverse_design.py  tiny_test.py
luminescent/: Manifest.toml  Project.toml  ant.py  back.py  bend.py  finetune.py  install.md  pyproject.toml  setup.py  straight.py  temp.py  test.py  tiny.py  wg.py
luminescent/a/: coupler.py  crossing_inverse_design_test.py  demux_inverse_design_test.py  maketest.py  mode_converter_inverse_design_test.py  splitter.py  tiny_test.py
luminescent/luminescent/: constants.py  generic_tech.py  materials.py  pcells.py  picToGDS.py  runs_utils.py  sol.py  utils.py
luminescent/luminescent/meta/: sparams.py
luminescent/luminescent/pic/: gcells.py  inverse_design.py  setup.py  sparams.py
luminescent/scratch/: pyproject.toml  setup.py
(+595 files in other folders)
