[tool.poetry]
name = "luminescent"
version = "0.1.4"
description = "Lumi FDTD by Luminescent AI is a GPU and automatic differentiation (AD) compatible FDTD package for simulation and inverse design in semiconductor photonics. Create layout in gdsfactory. Then use the Lumi Python plugin for calculating sparams or perform inverse design on Lumi's Julia backend."
authors = ["Paul Shen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gdsfactory = "^8.4.0"
empy = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"