[tool.poetry]
name = "luminescent"
version = "0.1.48"
description = "Lumi FDTD by Luminescent AI is a GPU and automatic differentiation (AD) compatible FDTD package for simulation and inverse design in semiconductor photonics. Create layout in gdsfactory. Then use the Lumi Python plugin for calculating sparams or perform inverse design on Lumi's Julia backend."
authors = ["Paul Shen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gdsfactory = "^8.4.0"
pillow = "^10.4.0"
bson = "^0.5.10"
cairosvg = "^2.7.1"
gdspy = "^1.6.13"
rasterio = "^1.3.10"
gdstk = "^0.9.52"
electromagneticpython = "^2.1.5"
rtree = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"