[project]
name = "luminescent"
version = "0.3.1"
description = "Lumi FDTD by Luminescent AI is a GPU and automatic differentiation (AD) compatible FDTD package for simulation and inverse design in semiconductor photonics. Create layout in gdsfactory. Then use the Lumi Python plugin for calculating sparams or perform inverse design on Lumi's Julia backend."
readme = "README.md"

dependencies=[
        "gdsfactory",
        "pillow",
        "stl-to-voxel",
        "electromagneticpython",
        "sortedcontainers",
    ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
